# SDL_Animations

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO.md  justfile  main.cpp
scripts/: build.sh  embed_font.sh
src/: constants.h  context.cpp  context.h  event_loop.cpp  event_loop.h  main.cpp
src/core/: app_state.cpp  app_state.h  constants.h  context.cpp  context.h
src/entities/: circle.cpp  circle.h  entity.cpp  entity.h  isometric_cube.cpp  isometric_cube.h  line.cpp  line.h  point.cpp  point.h  rectangle.cpp  rectangle.h  text.cpp  text.h  triangle.cpp  triangle.h  waypoint.cpp  waypoint.h
src/entities/isometric_cube/: isometric_cube.h  isometric_cube_pos_impl.cpp  isometric_cube_render_impl.cpp  isometric_cube_update_impl.cpp
src/entities/utils/: quad_geometry.cpp  quad_geometry.h
src/graphics/: fonts.cpp  fonts.h  graphics.cpp  graphics.h  renderer.cpp  renderer.h
src/graphics/embedded_fonts/: space_mono_regular.h
src/systems/: README.md  animation_system.cpp  animation_system.h  audio_system.cpp  audio_system.h  input_system.cpp  input_system.h
src/ui/: audio_ui.cpp  audio_ui.h  debug.cpp  debug.h  settings.cpp  settings.h  ui.cpp  ui.h  ui_component.h
src/utils/: uuid.cpp  uuid.h
